# fourier-motzkin

./: Examples.hs  fourier-motzkin.cabal
src/Solver/: FourierMotzkin.hs
src/Solver/FourierMotzkin/: Internal.hs
